--- a/architecture.html
+++ b/architecture.html
@@ -394,9 +394,9 @@
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body d-flex flex-wrap gap-3 justify-content-center">
-                            <img src="images/Architecture/Fairview Estate/Fairview Estate_01.tiff" class="img-fluid rounded modal-image" alt="Fairview Design 1" />
-                            <img src="images/Architecture/Fairview Estate/Fairview Estate_02.tiff" class="img-fluid rounded modal-image" alt="Fairview Design 2" />
-                            <img src="images/Architecture/Fairview Estate/Fairview Estate_03.tiff" class="img-fluid rounded modal-image" alt="Fairview Design 3" />
+                            <img src="images/Architecture/Fairview Estate/Fairview Estate_01.jpg" class="img-fluid rounded modal-image" alt="Fairview Design 1" />
+                            <img src="images/Architecture/Fairview Estate/Fairview Estate_02.jpg" class="img-fluid rounded modal-image" alt="Fairview Design 2" />
+                            <img src="images/Architecture/Fairview Estate/Fairview Estate_03.jpg" class="img-fluid rounded modal-image" alt="Fairview Design 3" />
                         </div>
                         <div class="modal-footer">
                             <p class="mb-0">Explore detailed plans and visuals designed for compact, sustainable living.</p>
@@ -458,10 +458,10 @@
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body d-flex flex-wrap gap-3 justify-content-center">
-                            <img src="images/Architecture/EchoFriendly/Echo_01.jpg" class="img-fluid rounded modal-image" alt="Echo-Friendly Design 1" />
-                            <img src="images/Architecture/EchoFriendly/Echo_02.jpg" class="img-fluid rounded modal-image" alt="Echo-Friendly Design 2" />
-                            <img src="images/Architecture/EchoFriendly/Echo_03.jpg" class="img-fluid rounded modal-image" alt="Echo-Friendly Design 3" />
-                            <img src="images/Architecture/EchoFriendly/Echo_04.jpg" class="img-fluid rounded modal-image" alt="Echo-Friendly Design 4" />
+                            <img src="images/Architecture/Echo Friendly/Echo Friendly_01.jpg" class="img-fluid rounded modal-image" alt="Echo-Friendly Design 1" />
+                            <img src="images/Architecture/Echo Friendly/Echo Friendly_02.jpg" class="img-fluid rounded modal-image" alt="Echo-Friendly Design 2" />
+                            <img src="images/Architecture/Echo Friendly/Echo Friendly_03.jpg" class="img-fluid rounded modal-image" alt="Echo-Friendly Design 3" />
+                            <img src="images/Architecture/Echo Friendly/Echo Friendly_04.jpg" class="img-fluid rounded modal-image" alt="Echo-Friendly Design 4" />
                         </div>
                         <div class="modal-footer">
                             <p class="mb-0">Designed to protect, sustain, and inspire — echo-conscious designs for a resilient future.</p>
