--- a/agents.html
+++ b/agents.html
@@ -143,74 +143,85 @@
 
                     <!-- Scrollable Leaderboard Table -->
                     <div class="table-responsive mb-5" style="max-height: 400px; overflow-y: auto;">
-                    <table class="table table-dark table-hover table-borderless align-middle shadow-sm rounded">
-                        <thead class="sticky-top" style="background: rgba(111, 66, 193, 0.3);">
-                        <tr class="text-violet">
-                            <th>#</th>
-                            <th>Name</th>
-                            <th>Division</th>
-                            <th>Points</th>
-                            <th>Level</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <td>1</td>
-                            <td>Nova</td>
-                            <td>Observation Logs</td>
-                            <td>987</td>
-                            <td><span class="badge bg-level5">Level 5</span></td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>Orion</td>
-                            <td>Command Center</td>
-                            <td>870</td>
-                            <td><span class="badge bg-level5">Level 5</span></td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>Vanta</td>
-                            <td>Journaling Agent</td>
-                            <td>720</td>
-                            <td><span class="badge bg-level4">Level 4</span></td>
-                        </tr>
-                        <tr>
-                            <td>4</td>
-                            <td>Hex</td>
-                            <td>News & Intel</td>
-                            <td>640</td>
-                            <td><span class="badge bg-level4">Level 4</span></td>
-                        </tr>
-                        <tr>
-                            <td>5</td>
-                            <td>Solis</td>
-                            <td>Spiritual Uplink</td>
-                            <td>590</td>
-                            <td><span class="badge bg-level4">Level 4</span></td>
-                        </tr>
-                        <tr>
-                            <td>6</td>
-                            <td>Zenith</td>
-                            <td>Master Node</td>
-                            <td>555</td>
-                            <td><span class="badge bg-level4">Level 4</span></td>
-                        </tr>
-                        </tbody>
-                    </table>
+                        <table class="table table-dark table-hover table-borderless align-middle shadow-sm rounded">
+                            <thead class="sticky-top" style="background: rgba(111, 66, 193, 0.3);">
+                            <tr class="text-violet">
+                                <th>#</th>
+                                <th>Name</th>
+                                <th>Division</th>
+                                <th>Points</th>
+                                <th>Level</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td>1</td>
+                                <td>Niël</td>
+                                <td>All divisions</td>
+                                <td>600+</td>
+                                <td><span class="badge bg-level5">Level 5</span></td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td>Lucah</td>
+                                <td>Referrals</td>
+                                <td>45</td>
+                                <td><span class="badge bg-level1">Level 1</span></td>
+                            </tr>
+
+                            <tr>
+                                <td>3</td>
+                                <td>Jayden</td>
+                                <td>New Recruit</td>
+                                <td>1</td>
+                                <td><span class="badge bg-level1">Level 1</span></td>
+                            </tr>
+                            </tbody>
+                        </table>
                     </div>
 
                     <!-- ✨ Points System Overview -->
                     <div class="mb-4 p-4 rounded text-light" style="background: rgba(111, 66, 193, 0.1); border: 1px solid #6f42c1;">
-                    <h5 class="text-violet glow-violet mb-3">📊 Slabbion Point System</h5>
-                    <ul class="mb-3">
-                        <li><strong>+1 Point</strong> — Referral for a completed basic project</li>
-                        <li><strong>+2–5 Points</strong> — Premium package referrals or large contributions</li>
-                        <li><strong>+1 Point</strong> — Visual/media/design contributions</li>
-                        <li><strong>+1 Point</strong> — Verified outreach, partnerships, or insights</li>
-                    </ul>
-                    <p class="text-muted mb-0">⚠️ Points only awarded after project completion and payment confirmation.</p>
+                        <h5 class="text-violet glow-violet mb-3">📊 Slabbion Point System</h5>
+                        <ul class="mb-3">
+                            <li><strong>+5 Points</strong> — For Basic Contributions
+                            <ul>
+                                <li>Examples: Small website updates, single-page builds, basic social media posts, logo design, simple banners.</li>
+                            </ul>
+                            </li>
+                            <li><strong>+10 Points</strong> — For Advanced Contributions
+                            <ul>
+                                <li>Examples: Multi-page websites, full social campaigns, product branding sets, UI design, content calendars.</li>
+                            </ul>
+                            </li>
+                            <li><strong>+20 Points</strong> — For Premium Contributions
+                            <ul>
+                                <li>Examples: Full website builds, eCommerce systems, full identity design packs, video content, paid ad campaigns.</li>
+                            </ul>
+                            </li>
+                            <li><strong>Referrals (When Project is Closed and Paid):</strong>
+                            <ul>
+                                <li><strong>+5 Points</strong> — Referral for Basic Package</li>
+                                <li><strong>+10 Points</strong> — Referral for Advanced Package</li>
+                                <li><strong>+20 Points</strong> — Referral for Premium Package</li>
+                            </ul>
+                            </li>
+                            <li><strong>Bonuses:</strong>
+                            <ul>
+                                <li><strong>+1–3 Points</strong> — Team spirit, creative ideas, trusted insights, early delivery, or crisis-solving moments.</li>
+                                <li><strong>+1 Point</strong> — For verified outreach or partnership connections that lead to new opportunities.</li>
+                            </ul>
+                            </li>
+                        </ul>
+
+                        <p class="text-warning mt-3 animate__animated animate__fadeInUp animate__delay-1s">
+                            💵 <strong>Each point = R100</strong> value. For example, 25 points = R2500 payout.
+                        </p>
+                        <p class="text-warning mt-3 animate__animated animate__fadeInUp animate__delay-1s">
+                            ⚠️ Points are only awarded after project delivery and confirmed payment from the client or lead.
+                        </p>
                     </div>
+
 
                     <!-- 🧬 Level Breakdown (Collapsible Cards) -->
                     <div class="accordion" id="levelBreakdown">
@@ -223,9 +234,9 @@
                         </button>
                         </h2>
                         <div id="lvl1Collapse" class="accordion-collapse collapse" data-bs-parent="#levelBreakdown">
-                        <div class="accordion-body">
-                            New explorers of the Slabbion realm. Eligible for early access perks and shoutouts.
-                        </div>
+                            <div class="accordion-body">
+                                New explorers of the Slabbion realm. Eligible for early access perks and shoutouts.
+                            </div>
                         </div>
                     </div>
 
@@ -237,9 +248,9 @@
                         </button>
                         </h2>
                         <div id="lvl2Collapse" class="accordion-collapse collapse" data-bs-parent="#levelBreakdown">
-                        <div class="accordion-body">
-                            Solid contributors with multiple successful contributions. Featured on website credits.
-                        </div>
+                            <div class="accordion-body">
+                                Solid contributors with multiple successful tasks or client interactions. Featured on website credits.
+                            </div>
                         </div>
                     </div>
 
@@ -251,9 +262,9 @@
                         </button>
                         </h2>
                         <div id="lvl3Collapse" class="accordion-collapse collapse" data-bs-parent="#levelBreakdown">
-                        <div class="accordion-body">
-                            Tactical minds shaping projects or creative direction. Eligible for agent dashboard testing.
-                        </div>
+                            <div class="accordion-body">
+                                Tactical minds shaping client vision, tech builds, or creative campaigns. Can manage their own clients under Slabbion.
+                            </div>
                         </div>
                     </div>
 
@@ -265,9 +276,9 @@
                         </button>
                         </h2>
                         <div id="lvl4Collapse" class="accordion-collapse collapse" data-bs-parent="#levelBreakdown">
-                        <div class="accordion-body">
-                            Leaders and strategists that guide Slabbion divisions. Granted semi-private access to tools and briefs.
-                        </div>
+                            <div class="accordion-body">
+                                Strategic leaders trusted with sensitive briefs and Slabbion tools. Access to beta tech, internal dashboards, and confidential missions.
+                            </div>
                         </div>
                     </div>
 
@@ -279,9 +290,9 @@
                         </button>
                         </h2>
                         <div id="lvl5Collapse" class="accordion-collapse collapse" data-bs-parent="#levelBreakdown">
-                        <div class="accordion-body">
-                            The elite few who shaped the very core of Slabbion. Receive full dashboard access + future rewards.
-                        </div>
+                            <div class="accordion-body">
+                                The elite few who shaped the core of Slabbion. 
+                            </div>
                         </div>
                     </div>
 
@@ -296,6 +307,7 @@
             </div>
         </div>
     </div>
+
 
     <!-- Custom Solutions Hero -->
     <section id="hero" class="text-center py-5">
